# payroll_arg_reportes

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
base_reports/: recibo_base_1.py
docs/: acreditaciones-galicia.md  acreditaciones-santander.md  f931.md  libro-de-sueldos-digital.md  libro-de-sueldos.md  pypi-publish.md  recibo-de-sueldos.md
py_arg_reports/: config.py  logs.py
py_arg_reports/bancos/: README.md
py_arg_reports/bancos/acreditaciones/: __init__.py  base.py
py_arg_reports/base_reports/: recibo_base_1.py
py_arg_reports/reporters/: descarga_excel.py  libro_sueldo.py  recibo_sueldo.py
py_arg_reports/reporters/acreditaciones/: README.md  __init__.py  base.py
py_arg_reports/reporters/f931/: reporter.py  (+1 more)
py_arg_reports/test_cases/: f931-info.json  liquidacion_completa.json  liquidacion_corta.json  lsd-info-1l.json  lsd-info-2l.json  lsd-info-missing_conceptos.json  lsd-info-missing_empleados.json  lsd-info-missing_info931.json  lsd-info-missing_info931_campos.json  test_f931.py  test_libro_sueldo.py  test_libro_sueldo_digital.py  test_recibo.py
py_arg_reports/tools/: base.py  pdf.py  recibos_utils.py  tools.py  txt.py
reporters/: recibo_sueldo.py
src/reporters/: recibo_sueldo.py
src/tables/: base_tables.py
src/tools/: recibos_utils.py
tables/: base_tables.py
test_cases/: liquidacion.json  test_recibo.py
tests/: test_download_recibo.py
tests/f931/: test_generacion_f931.py
tests/libro_sueldo/: test_base_pdf.py
tests/libro_sueldo_digital/: test_generacion_lsd.py
(+44 files in other folders)
