[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payroll_arg_reportes"
version = "0.0.34"
dependencies = [
  "numero-a-letras>=0.0.4",
  "reportlab>=4.0.8,<5",
  "XlsxWriter>=3.2.0,<4",
  "openpyxl>=3.1.4,<4",
]
requires-python = ">=3.10"
authors = [
  {name="Eugenio", email="coding_with@eugeniovazquez.com.ar"},
  {name="Andres", email="andres@data99.com.ar"},
]
maintainers = [
  {name="Eugenio", email="coding_with@eugeniovazquez.com.ar"},
  {name="Andres", email="andres@data99.com.ar"},
]
description = "Reportes para Payroll en Argentina"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Artimezoft/payroll_arg_reportes"
Issues = "https://github.com/Artimezoft/payroll_arg_reportes/issues"

[tool.hatch.build.targets.wheel]
packages = ["py_arg_reports"]